# rust-horn-belt

./: .gitignore  .gitlab-ci.yml  README.md  _CoqProject  coq-lambda-rust.opam  walkthrough.md
theories/lang/: adequacy.v  heap.v  lang.v  lifting.v  notation.v  proofmode.v  tactics.v  time.v
theories/lang/lib/: arc.v  memcpy.v  new_delete.v
theories/lifetime/: at_borrow.v  frac_borrow.v  lifetime.v  lifetime_sig.v  na_borrow.v
theories/lifetime/model/: accessors.v  creation.v  definitions.v  primitive.v  reborrow.v
theories/prophecy/: functions.v  prophecy.v  syn_type.v
theories/typing/: always_true.v  array.v  array_idx.v  array_util.v  base.v  base_type.v  bool.v  borrow.v  cont.v  cont_context.v  empty.v  fixpoint.v  function.v  ghost.v  ghost_fn.v  hints.v  int.v  lft_contexts.v  logic_fn.v  maybe_uninit.v  mod_ty.v  own.v  product.v  product_split.v  programs.v  ptr.v  refined.v  shr_bor.v  soundness.v  sum.v  type.v  type_context.v  type_sum.v  typing.v  uninit.v  uniq_alt.v  uniq_alt_borrow.v  uniq_array_util.v  uniq_bor.v  uniq_cmra.v  (+4 more)
theories/typing/examples/: derived_rules.v  get_sum_list.v  get_x.v  inc_max.v  inc_some_list.v  inc_vec.v  init_prod.v  lazy_lft.v  nonlexical.v  odd_sum.v  projection_toggle.v  rebor.v  take_some_list.v  unbox.v
theories/typing/lib/: arc.v  cell.v  diverging_static.v  fake_shared.v  join.v  lib_ghost_fn.v  list.v  loop.v  maybe_uninit.v  option.v  panic.v  (+6 more)
theories/util/: basic.v  discrete_fun.v  fancy_lists.v  functional_choice.v  list.v  pairwise.v  point_free.v  proof_irrelevance.v  types.v  update.v  vector.v
(+52 files in other folders)
